# python-platform-sample-lambda_function

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml  terragrunt.hcl
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: deploy-sandbox.yml  draft-release.yaml  draft-release.yml  label-pull-request.yaml  pull-request-ephemeral-deploy.yml  pull-request-ephemeral-destroy.yml  pull-request-label.yml  pull-request-plan-production.yml  pull-request-python-tests.yml  python-tests.yml  release-draft.yml  release-publish.yml  release-published.yml  terragrunt-deploy.yml  test.yml
platform/production/us-east-1/000/: terraform.tfvars
platform/production/us-east-2/000/: terraform.tfvars  terragrunt.hcl
platform/sandbox/: account.hcl
platform/sandbox/us-east-2/000/: backend.tf  provider.tf  terraform.tfvars  terragrunt.hcl
platform/sandbox/us-east-2/001/: terraform.tfvars  terragrunt.hcl
platform/sandbox/us-west-2/000/: terraform.tfvars
platform/sandbox/us-west-2/001/: terraform.tfvars
src/function/: app.py
test/unit/: test_app.py
